--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,5 +7,14 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <!--自定义seekbarstyle-->
+    <style name="CustomSeekbarStyle">
+        <item name="android:maxHeight">10dp</item>
+        <item name="android:indeterminateOnly">false</item>
+        <item name="android:indeterminateDrawable">@color/blue</item>
+        <!--        <item name="android:progressDrawable">@android:color/holo_blue_light</item>-->
+        <item name="android:minHeight">10dp</item>
+        <!--        <item name="android:thumb">@android:drawable/btn_minus</item>-->
+    </style>
 
 </resources>
